--- a/fighting.html
+++ b/fighting.html
@@ -82,12 +82,12 @@
                     </div>
                 </div>
                 <!-- 这里修改：改为点击更多时，继续向下加载，页面调转 -->
-                <div class="forMoreArticle"><a href="#" class="forMore">更多》</a></div>
+                <!--<div class="forMoreArticle"><a href="#" class="forMore">更多》</a></div>-->
             </div>
             <!-- 内容区域-右-->
             <div class="fightContentR">
                 <div class="recommendModule">
-                    <p class="moduleTitle"></p>
+                    <span class="moduleTitle">推荐文章</span>
                     <ul class="moduleItems">
                         <li><a href="">推荐文章标题</a></li>
                         <li><a href="">推荐文章标题</a></li>
@@ -98,8 +98,8 @@
                     </ul>
                 </div>
                 <div class="picturesModule">
-                    <p class="moduleTitle"></p>
-                    <ul class="modulePictures">
+                    <span class="moduleTitle">我的相册</span>
+                    <ul class="modulePictures clearfix">
                         <li><a href=""><img class="picturesModuleImg" src="img/fighting/dog.png"/></a></li>
                         <li><a href=""><img class="picturesModuleImg" src="img/fighting/dog.png"/></a></li>
                         <li><a href=""><img class="picturesModuleImg" src="img/fighting/dog.png"/></a></li>
