关于我页面部分1

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -26,12 +26,12 @@
     </div>
     <!-- 简单内容介绍 -->
     <div class="personalWrap">
-        <div class="container">
+        <div class="container clearfix">
             <img class="myHeadImg" src="img/fighting/dog.png"/>
             <div class="myBaseInfo">
-                <p><span class="myName">肖孟娟</span>web前端开发</p>
+                <p><span class="myName">Mengjuan.Xiao</span>web前端开发</p>
                 <p><span>女</span><span>1994-07</span><span>上海</span></p>
-                <span>1430099096@qq.com</span>
+                <p><span>1430099096@qq.com</span></p>
             </div>
         </div>
     </div>
