部分页面修整

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -59,9 +59,9 @@
                         文章内容文章内容,文章内容文章内容文章内容</p>
                 </div>
                 <div class="leaveMessage">
-                    <p>
+                    <p class="clearfix">
                         <span class="leaveTitle">留言板</span>
-                        <span class="leaveWords">有什么话，就说吧！</span>
+                        <span class="leaveWords">有话， 就说吧！</span>
                     </p>
                     <textarea class="msgTextArea" placeholder=""></textarea>
                 </div>
@@ -73,10 +73,8 @@
                     <ul class="moreList">
                         <li>网名：xmj523 | 游梦*</li>
                         <li>籍贯：安徽</li>
-                        <li>现居：上海市</li>
-                        <li>职业：web前端开发</li>
                         <li>爱好：画画等</li>
-                        <li>特点：懒</li>
+                        <li>特点：有点儿懒</li>
                         <li>喜欢的书：《苏菲的世界》《福尔摩斯》...</li>
                         <li>喜欢的电影：《大话西游》《寻梦环游记》...</li>
                         <li>喜欢的动漫：《海贼王》《柯南》《一禅小和尚》...</li>
