生活篇完善，首页结构划分

--- a/onLife.html
+++ b/onLife.html
@@ -29,11 +29,59 @@
         <div class="onLifeBanner"><img class="bannerImg" src="img/common/banner2.jpg"/></div>
         <p class="bannerText">美丽的风景一直都在。</p>
     </div>
-    <!-- 内容区域-左右布局 -->
+    <!-- 内容区域 -->
     <div class="onLifeContent">
         <div class="container">
-            <!-- 内容区域 -->
-
+            <div class="lifeCollect clearfix">
+                <div class="lifeCollectTitle">
+                    <p>
+                        <span class="lifeMainTitle">主标题</span>
+                        <span class="lifeSecondTitle">小副标题</span>
+                    </p>
+                </div>
+                <div class="collectItem clearfix">
+                    <p class="collectItemTitle">小标题小标题小标题小标题小标题</p>
+                    <img class="collectItemImg" src="img/fighting/dog.png"/>
+                    <p class="collectItemContent">小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容</p>
+                </div>
+                <div class="collectItem clearfix">
+                    <p class="collectItemTitle">小标题小标题小标题小标题小标题</p>
+                    <img class="collectItemImg" src="img/fighting/dog.png"/>
+                    <p class="collectItemContent">小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容</p>
+                </div>
+                <div class="collectItem clearfix">
+                    <p class="collectItemTitle">小标题小标题小标题小标题小标题</p>
+                    <img class="collectItemImg" src="img/fighting/dog.png"/>
+                    <p class="collectItemContent">小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容</p>
+                </div>
+                <div class="collectItem clearfix">
+                    <p class="collectItemTitle">小标题小标题小标题小标题小标题</p>
+                    <img class="collectItemImg" src="img/fighting/dog.png"/>
+                    <p class="collectItemContent">小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容小模块内容</p>
+                </div>
+            </div>
+            <div class="lifePhotos">
+                <div class="lifeCollectTitle">
+                    <p>
+                        <span class="lifeMainTitle">主标题</span>
+                        <span class="lifeSecondTitle">小副标题</span>
+                    </p>
+                </div>
+                <div class="lifePhotosItems">
+                    <img class="lifePhotosImg" src="img/fighting/dog.png"/>
+                    <img class="lifePhotosImg" src="img/fighting/dog.png"/>
+                    <img class="lifePhotosImg" src="img/fighting/dog.png"/>
+                    <img class="lifePhotosImg" src="img/fighting/dog.png"/>
+                    <img class="lifePhotosImg" src="img/fighting/dog.png"/>
+                    <img class="lifePhotosImg" src="img/fighting/dog.png"/>
+                    <img class="lifePhotosImg" src="img/fighting/dog.png"/>
+                    <img class="lifePhotosImg" src="img/fighting/dog.png"/>
+                    <img class="lifePhotosImg" src="img/fighting/dog.png"/>
+                    <img class="lifePhotosImg" src="img/fighting/dog.png"/>
+                    <img class="lifePhotosImg" src="img/fighting/dog.png"/>
+                    <!--<img class="lifePhotosImg" src="img/fighting/dog.png"/>-->
+                </div>
+            </div>
         </div>
     </div>
     <!-- 底部(公共) -->
