--- a/index.html
+++ b/index.html
@@ -2,9 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>home</title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/common.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-
+<div class="fighting">
+    <!-- 公共部分：每个页面都有，最好做成公共的，避免以后修改时，要每个页面都要改 -->
+    <!-- 菜单(公共) -->
+    <div class="publicMenu">
+        <div class="container clearfix">
+            <div class="menuLogo"><img class="logoImg" src="img/common/logoblack.jpg"/></div>
+            <div class="menuNav">
+                <ul class="clearfix">
+                    <li class="navItem"><a href="">Home</a></li>
+                    <li class="navItem navItemOn"><a href="">FightChapter</a></li>
+                    <li class="navItem"><a href="">LifeChapter</a></li>
+                    <li class="navItem"><a href="">AboutMe</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- 背景图 -->
+    <div class="bannerWrap">
+        <div class="onLifeBanner"><img class="bannerImg" src="img/common/banner2.jpg"/></div>
+        <p class="bannerText">逝者如斯夫，不舍昼夜。</p>
+    </div>
+    <!-- 内容区域 -->
+    <div class="homeContent">
+        <div class="container">
+            <!--小动画(花草生长或飞舞等)-->
+            <div class="homeAnimateArea">
+            </div>
+            <!--简介(比较炫点)-->
+            <div class="homeIntroArea">
+            </div>
+            <!--小游戏(石头。剪刀。布 Time for the Game.)-->
+            <div class="homeGameArea">
+            </div>
+        </div>
+    </div>
+    <!-- 底部(公共) -->
+    <div class="publicFooter">
+        <div class="container clearfix">
+            <ul class="footerUl">
+                <li><a>关于我</a></li>
+                <li><span>意见或反馈</span></li>
+            </ul>
+            <ul class="footerUl">
+                <li><span>QQ:1430099096</span></li>
+                <li><span>邮箱:1430099096@qq.com</span></li>
+            </ul>
+            <ul class="footerUl">
+                <li><span>Logo Created By Ms.</span></li>
+                <li><span>Pages Designed By Ms.</span></li>
+            </ul>
+            <ul class="footerUlLogo">
+                <li><img class="footerLogo" src="img/common/logowhite.png"/></li>
+            </ul>
+        </div>
+    </div>
+</div>
 </body>
 </html>
