文本修改及首页简单结构

--- a/index.html
+++ b/index.html
@@ -37,9 +37,14 @@
             </div>
             <!--简介(比较炫点)-->
             <div class="homeIntroArea">
+                <p></p>
             </div>
             <!--小游戏(石头。剪刀。布 Time for the Game.)-->
             <div class="homeGameArea">
+                <div class="">
+                    <div class=""></div>
+                    <div class=""></div>
+                </div>
             </div>
         </div>
     </div>
@@ -65,4 +70,5 @@
     </div>
 </div>
 </body>
+<script src="js/index.js"></script>
 </html>
