--- a/aboutMe.html
+++ b/aboutMe.html
@@ -6,23 +6,16 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <link rel="stylesheet" type="text/css" href="css/aboutme.css">
+    <script src="js/common.js"></script>
 </head>
 <body>
 <div class="fighting">
     <!-- 公共部分：每个页面都有，最好做成公共的，避免以后修改时，要每个页面都要改 -->
     <!-- 菜单(公共) -->
-    <div class="publicMenu">
-        <div class="container clearfix">
-            <div class="menuLogo"><img class="logoImg" src="img/common/logoblack.jpg"/></div>
-            <div class="menuNav">
-                <ul class="clearfix">
-                    <li class="navItem"><a href="">Home</a></li>
-                    <li class="navItem navItemOn"><a href="">FightChapter</a></li>
-                    <li class="navItem"><a href="">LifeChapter</a></li>
-                    <li class="navItem"><a href="">AboutMe</a></li>
-                </ul>
-            </div>
-        </div>
+    <div class="publicMenu" id="publicMenu">
+        <script>
+            MYAPP.fun.loadHead('AboutMe');
+        </script>
     </div>
     <!-- 简单内容介绍 -->
     <div class="personalWrap">
@@ -87,30 +80,10 @@
         </div>
     </div>
     <!-- 底部(公共) -->
-    <div class="publicFooter">
-        <div class="container clearfix">
-            <ul class="footerUl">
-                <li><a>关于我</a></li>
-                <li><span>意见或反馈</span></li>
-            </ul>
-            <ul class="footerUl">
-                <li><span>QQ:1430099096</span></li>
-                <li><span>邮箱:1430099096@qq.com</span></li>
-            </ul>
-            <ul class="footerUl">
-                <li><span>Logo Created By Ms.</span></li>
-                <li><span>Pages Designed By Ms.</span></li>
-            </ul>
-            <!--<ul class="footerUl">
-                <li><span>自学网站</span></li>
-                <li><a href="http://www.w3school.com.cn" target="_blank">w3school</a></li>
-                <li><a href="https://www.imooc.com" target="_blank">慕课网</a></li>
-                <li><a href="https://www.icourse163.org" target="_blank">慕课大学</a></li>
-            </ul>-->
-            <ul class="footerUlLogo">
-                <li><img class="footerLogo" src="img/common/logowhite.png"/></li>
-            </ul>
-        </div>
+    <div class="publicFooter" id="publicFooter">
+        <script>
+            MYAPP.fun.loadFoot();
+        </script>
     </div>
 </div>
 </body>
